valid_tests/control_flow/test3.go
// Test 3: Complex control flow with early returns
func fibonacci(n int) int {
    if n <= 1 {
        return n
    }
    return fibonacci(n-1) + fibonacci(n-2)
}

func main() {
    result := fibonacci(5)
}
