invalid_tests/functions/test1.go
// Test 1: Function parameter without type
func add(a, b) int {
    return a + b
}

func main() {
    result := add(1, 2)
}
